# PAlgoX

./: .gitignore  CMakeLists.txt  README.md  palgox.cpp  palgox.h  palgox_spec.cpp
Documentation/: Documentation.md  palgox_graphx_docs.md  palgox_matx_docs.md  palgox_vecx_docs.md
src/: Documentation.md  palgox.cpp  palgox.h
tests/: palgox_spec.cpp  speedup_tests.cpp
